fix: update text content spacing and margin in presentation.php and general.scss for improved layout consistency

--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -706,7 +706,7 @@ body.logged-in {
 
 .text-content-spacing {
 	p,h1,h2.h3,h4,h5,h6, ul, ol, table, iframe {
-		margin-bottom: 25px;
+		margin-bottom: 20px;
 	}
 
 	& > *:first-child {
